Bug 214827 - REGRESSION(r230479): [TextureMapper] replica layer is not rendered
Summary: REGRESSION(r230479): [TextureMapper] replica layer is not rendered
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: Gtk, InRadar, LayoutTestFailure
Depends on:
Blocks:
 
Reported: 2020-07-27 07:53 PDT by Carlos Garcia Campos
Modified: 2020-07-27 23:56 PDT (History)
14 users (show)

See Also:


Attachments
Patch (477.17 KB, patch)
2020-07-27 07:57 PDT, Carlos Garcia Campos
no flags Details | Formatted Diff | Diff
Patch (477.17 KB, patch)
2020-07-27 07:59 PDT, Carlos Garcia Campos
aperez: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2020-07-27 07:53:37 PDT
When the layer is accelerated the replica layer is not rendered since r230479 because we are not applying the replica layer transform.
Comment 1 Carlos Garcia Campos 2020-07-27 07:57:57 PDT
Created attachment 405273 [details]
Patch
Comment 2 Carlos Garcia Campos 2020-07-27 07:59:20 PDT
Created attachment 405274 [details]
Patch
Comment 3 Carlos Garcia Campos 2020-07-27 23:55:40 PDT
Committed r264965: <https://trac.webkit.org/changeset/264965>
Comment 4 Radar WebKit Bug Importer 2020-07-27 23:56:17 PDT
<rdar://problem/66203132>